# server/docs/swagger.yaml
@@ -40,6 +40,30 @@ paths:
       summary: activate or deactivate a user
       tags:
       - Admin
+  /api/admin/avatar:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: uname for its avatar
+        in: query
+        name: uname
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK - get avatar src base64
+        "400":
+          description: Fail - user does not exist
+        "404":
+          description: Fail - avatar is empty
+      security:
+      - ApiKeyAuth: []
+      summary: get a user's avatar src as base64
+      tags:
+      - Admin
   /api/admin/officialize:
     put:
       consumes:
@@ -640,7 +664,7 @@ paths:
           description: Fail - internal error
       security:
       - ApiKeyAuth: []
-      summary: get user avatar src as base64
+      summary: get self avatar src as base64
       tags:
       - User
   /api/user/heartbeats:
